# europa

./: README.md  pyproject.toml  tox.ini
configs/: simple_config.yaml
europa/: __init__.py
europa/config/: __init__.py  config_map.py  data_config.py  europa_config.py  training_config.py  utils.py
europa/datasets/: __init__.py  bid_datamodule.py  bid_dataset.py  utils.py
europa/modules/: __init__.py  europa.py
europa/utils/: __init__.py  log_samples_callback.py
examples/: train.ipynb
tests/: test_config.py
