[tool.poetry]
name = "europa"
version = "0.1.0"
description = ""
authors = ["Lua Labs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.41.2"
datasets = "2.20.0"
peft = "^0.12.0"
accelerate = "^0.33.0"
bitsandbytes = "^0.43.2"
pillow = "^10.4.0"
albumentations = "^1.4.12"
lightning = "^2.3.3"
pyparsing = "^3.1.2"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
